--- a/src/Microsoft.OData.ModelBuilder/Microsoft.OData.ModelBuilder.csproj
+++ b/src/Microsoft.OData.ModelBuilder/Microsoft.OData.ModelBuilder.csproj
@@ -24,6 +24,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.OData.Edm" Version="7.9.0" />
     <PackageReference Include="Microsoft.Spatial" Version="7.9.0" />
+    <PackageReference Include="NodaTime" Version="3.0.9" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
